--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=129.148.55.118
 DB_USER=QualityAdmin
-DB_PASSWORD=Suus0220##
+DB_PASSWORD=Seg@1977
 DB_NAME=Quality_EAD
 JWT_SECRET=suus02201998##
